


--------------------------------------------------------------------------------
Release 0.1
--------------------------------------------------------------------------------
================================================================================
 T O D O S
================================================================================
* problems with data send and arduino uno

* create sexy icons
* build installers
* use maven and/or ant for build process
* remove beta state

* correct dsc-protocol.txt
* Draw Arduino Layout in Fritzing
* Simple Logging of photo number combined with the current configuration
* Logging of exceptions/errors/informations/...
* Add Tests to the most important services and util methods
* Fix UI Layout Issues
* Analyse Heap Dump with lots of devices and actions
* Test on Linux especially RxTx
* Exception handling for RxTx


================================================================================
 I D E A S
================================================================================
* Internationalize Messages from Arduino
* use ant for build process (jarbuilder)
* direct device control: send OFF to all that are ON when closing
* make devices moveable
* Create own Spinner for easier round delay input
* Drag&Drop Device Panels and Actions
* Add colored logging messages
* Make logging level editable
* Disable Serial Communication Actions if No Connection is established
* Create Custom L&F with Synth or Nimbus
* Only fire association changed event if object was added/removed?
* Set Description and Color per Device
* Mark Device Type with Icons
* Sensors
	- Sensor Setup Panel
	- SensorAction starts when sensor fires (with offset and/or duration)
* Open/Close Panels
* Move logging to own window?
* Tabbed View (Setup, Shooting, Finish/Clean)
* Only send data if something changed since last send
* Setup Flashes without valves
* Empty valves (all, single, combination)
* Processing:
	o embed Comments, Tags to EXIF