@@ -18,8 +18,16 @@ Release 0.1
 ================================================================================
  T O D O S
 ================================================================================
-* problems with data send and arduino uno
+* device mapping (analog pins on arduino)
+* Round delay BEFOR round!
 
+* problems with data send and arduino uno/nano
+* label for control number and info in docu
+* Configuration for IDropletMessageProtocol (implements send/start/stop/rounds/delay/...)
+  to show or hide ui controls
+* Focus for Camera
+
+* Aufpassen bei Arduino Ordner in dem die cpp und h files liegen!
 * create sexy icons
 * build installers
 * use maven and/or ant for build process
@@ -87,6 +95,7 @@ NOTES:
 
 CHANGES:
 * Rounds and Round Delay not saved to Droplet Configuration anymore
+* Changed max.times from 1.000ms to 99.999ms
 
 
 BUG FIXES:
